Start work on deploy and releases page

--- a/src/pages/deploy.html
+++ b/src/pages/deploy.html
@@ -1,30 +1,18 @@
----
-layout=default.html
----
-<main class="container">
-  <section>
-    <h2>Deployment</h2>
-    <div class="grid" style="--grid-cell-width:300px;">
-      <div class="card">
-        <h3>For ARM Mac</h3>
-        <p><a href="/releases/sssg-mac-arm">Download</a></p>
-        <p class="u-smaller">Updated: 20240918.</p>
+<DefaultLayout>
+  <main class="container">
+    <section>
+      <h2>Deployment</h2>
+      <div class="grid-2">
+        <span class="grid-2__number">1.</span>
+
+        <p class="u-smaller">
+          Download the sssg binary from <a href="/releases.html">here</a>.
+        </p>
+        <p class="u-smaller">
+          This is the only dependency. You'll need the right version for your
+          platform (Windows, Mac, Linux, etc).
+        </p>
       </div>
-      <div class="card">
-        <h3>For Intel Mac</h3>
-        <p><a href="/releases/sssg-mac-intel">Download</a></p>
-        <p class="u-smaller">Updated: 20240918.</p>
-      </div>
-      <div class="card">
-        <h3>For Windows</h3>
-        <p><a href="/releases/sssg-windows">Download</a></p>
-        <p class="u-smaller">Updated: 20240918.</p>
-      </div>
-      <div class="card">
-        <h3>For Linux</h3>
-        <p>Build from source.</p>
-        <p class="u-smaller">Updated: 20240918.</p>
-      </div>
-    </div>
-  </section>
-</main>
+    </section>
+  </main>
+</DefaultLayout>
