More work on deploy. Add self-hosting

--- a/src/pages/self-hosting.html
+++ b/src/pages/self-hosting.html
@@ -1,22 +1,16 @@
 <DefaultLayout>
   <main class="container">
     <section>
-      <h2>Deployment</h2>
+      <h2>Self-hosting</h2>
 
       <p style="width: 45ch">
-        This page contains instructions for deploying your website to our
-        server. Yes, you can host your static website on our server!
+        This page contains instructions on how to self-host your website.
       </p>
 
       <p style="width: 45ch">
-        It's a little complicated behind the scenes, but we'll try to explain it
-        clearly so that you are comfortable trusting us with your website.
-      </p>
-
-      <p style="width: 45ch">
-        Of course, if you want to host your own website, you can do that too. Go
-        <a href="/self-hosting.html">here</a> for instructions on how to do
-        that.
+        Of course, if you change your mind you can deploy your website to our
+        servers. Go <a href="/deploying.html">here</a> for instructions on how
+        to do that.
       </p>
 
       <div class="grid-2">
