Update content and download directories

--- a/src/pages/releases.html
+++ b/src/pages/releases.html
@@ -4,24 +4,29 @@
       <h2>Releases</h2>
       <div class="grid" style="--grid-cell-width: 300px">
         <div class="card">
-          <h3>For ARM Mac</h3>
-          <p><a href="/releases/sssg-mac-arm">Download</a></p>
-          <p class="u-smaller">Updated: 20240918.</p>
+          <h3>For Linux ARM</h3>
+          <p><a href="/assets/downloads/linux-arm/sssg">Download</a></p>
+          <p class="u-smaller">Updated: 20250110.</p>
         </div>
         <div class="card">
-          <h3>For Intel Mac</h3>
-          <p><a href="/releases/sssg-mac-intel">Download</a></p>
-          <p class="u-smaller">Updated: 20240918.</p>
+          <h3>For Linux Intel</h3>
+          <p><a href="/assets/downloads/linux-intel/sssg">Download</a></p>
+          <p class="u-smaller">Updated: 20250110.</p>
+        </div>
+        <div class="card">
+          <h3>For Mac ARM</h3>
+          <p><a href="/assets/downloads/mac-arm/sssg">Download</a></p>
+          <p class="u-smaller">Updated: 20250110.</p>
+        </div>
+        <div class="card">
+          <h3>For Mac Intel</h3>
+          <p><a href="/assets/downloads/mac-intel/sssg">Download</a></p>
+          <p class="u-smaller">Updated: 20250110.</p>
         </div>
         <div class="card">
           <h3>For Windows</h3>
-          <p><a href="/releases/sssg-windows">Download</a></p>
-          <p class="u-smaller">Updated: 20240918.</p>
-        </div>
-        <div class="card">
-          <h3>For Linux</h3>
-          <p>Build from source.</p>
-          <p class="u-smaller">Updated: 20240918.</p>
+          <p><a href="/assets/downloads/windows/sssg.exe">Download</a></p>
+          <p class="u-smaller">Updated: 20250110.</p>
         </div>
       </div>
     </section>
