--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -60,13 +60,27 @@
       <div class="grid-2">
         <span class="grid-2__number">5.</span>
         <p class="u-smaller">
-          Run <code class="u-code">sssg --deploy &lt;domain&gt;</code>.
+          Run <code class="u-code">sssg --register --domain  &lt;domain&gt;</code>.
         </p>
         <p class="u-smaller">
-          TODO: UPDATE THESE INSTRUCTIONS. If you have access to SSH on your
-          server, running <code class="u-code">sssg --deploy</code> will deploy
-          <code class="u-code">./dist</code> via rsync over SSH to a directory
-          of your choosing. Learn more <a href="/deploy.html">here</a>.
+          If you have your own domain you can specify it here. Otherwise, you can choose
+          a sub-domain on sssg.dev to get started. As long as someone else hasn't chosen
+          that sub-domain, you can use it. When you register a domain you will also get a
+          "staging" sub-domain on sssg.dev. You can deploy to staging without affecting
+          your production site.
+        </p>
+      </div>
+      <div class="grid-2">
+        <span class="grid-2__number">5.</span>
+        <p class="u-smaller">
+          Run <code class="u-code">sssg --deploy --staging<br><br>or<br><br>sssg --deploy --production</code>.
+        </p>
+        <p class="u-smaller">
+          This will build your site, zip it up, and deploy it to our servers (staging or production).
+          You can access both of your sites via HTTPS.
+          <br><br>
+          If you want to deploy to your own server you can do that manually. Run <code>sssg --build</code> and
+          then deploy the contents of <code>./dist</code> to your server.
         </p>
       </div>
     </section>
@@ -197,7 +211,7 @@
               d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"
             />
           </svg>
-          <p class="card__text">Beautiful semantic styling via PicoCSS.</p>
+          <p class="card__text">Beautiful semantic styling via OpenProps.</p>
         </div>
         <div class="card">
           <svg
@@ -233,7 +247,7 @@
               d="M5.26 17.242a.75.75 0 1 0-.897-1.203 5.243 5.243 0 0 0-2.05 5.022.75.75 0 0 0 .625.627 5.243 5.243 0 0 0 5.022-2.051.75.75 0 1 0-1.202-.897 3.744 3.744 0 0 1-3.008 1.51c0-1.23.592-2.323 1.51-3.008Z"
             />
           </svg>
-          <p class="card__text">Deploy to your server via rsync over SSH.</p>
+          <p class="card__text">Deploy easily to our server or manually to your own.</p>
         </div>
       </div>
       <a class="l-why-use-it__cta" href="#get_started"
