--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -73,7 +73,7 @@
       <div class="grid-2">
         <span class="grid-2__number">5.</span>
         <p class="u-smaller">
-          Run <code class="u-code">sssg --deploy --staging<br><br>or<br><br>sssg --deploy --production</code>.
+          Run:<br><code class="u-code">sssg --deploy --staging</code><br>or<br><code class="u-code">sssg --deploy --production</code>.
         </p>
         <p class="u-smaller">
           This will build your site, zip it up, and deploy it to our servers (staging or production).
@@ -211,7 +211,7 @@
               d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"
             />
           </svg>
-          <p class="card__text">Beautiful semantic styling via OpenProps.</p>
+          <p class="card__text">Beautiful styling via OpenProps + Normalize.</p>
         </div>
         <div class="card">
           <svg
