--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,343 +1,98 @@
 <DefaultLayout>
-  <main class="container">
-    <section class="l-hero">
-      <h1 style="font-size: 3em" class="l-hero__heading brand-800">
-        A <span class="u-underline">simple</span> website framework.
-      </h1>
+  <section class="hero">
+    <h1>a <span>simple</span> website framework</h1>
+    <h3>This is a <b>lightweight</b>, opinionated framework <b>for developers</b> who want <b>simplicity, speed, and ease</b> in creating, maintaining, and deploying <b>static websites</b>.</h3>
+  </section>
 
-      <h2 class="l-hero__subheading text-center">
-        This is a <b>lightweight</b>, opinionated framework
-        <b>for developers</b> who want <b>simplicity, speed, and ease</b> in
-        creating, maintaining, and deploying <b>static websites</b>.
-      </h2>
+  <section>
+    <h2>How do I get started?</h2>
+    <div class="just-for-gap">
+      <article>
+        <p>1. Download the binary from <a href="#">here</a>. This is the only dependency.</p>
+      </article>
+      <article>
+        <p>2. Run <code>sssg --init</code> to scaffold your new site in the current directory.</p>
+      </article>
+      <article>
+        <p>3. Run <code>sssg --dev</code> to start the dev server. It will tell you where your site is running.</p>
+      </article>
+      <article>
+        <p>4. Modify your content in the <code>./src</code> directory and your changes will be reflected in the browser immediately.</p>
+      </article>
+      <article>
+        <p>5. Run <code>sssg --register --domain &lt;domain&gt;</code> to choose where your site will run. This will reserve &lt;domain&gt; for your site AND create a "staging" subdomain for you on sssg.dev.</p>
+      </article>
+      <article>
+        <p>6. Run:<br><br><code>sssg --deploy --staging</code><br><br>or<br><br><code>sssg --deploy --production</code><br><br>to deploy your site to our server. Deploying to staging will not affect your production site.</p>
+      </article>
+    </div>
+  </section>
 
-      <a class="l-hero__cta" href="#get_started"
-        ><button>I want to get started</button></a
-      >
-    </section>
-
-    <section id="get_started" class="l-get-started">
-      <h2 class="l-get-started__heading">How do I get started?</h2>
-
-      <div class="grid-2">
-        <span class="grid-2__number">1.</span>
-
-        <p class="u-smaller">
-          Download the sssg binary from <a href="/releases.html">here</a>.
-        </p>
-        <p class="u-smaller">
-          This is the only dependency. You'll need the right version for your
-          platform (Windows, Mac, Linux, etc).
-        </p>
-      </div>
-      <div class="grid-2">
-        <span class="grid-2__number">2.</span>
-
-        <p class="u-smaller">Run <code class="u-code">sssg --init</code>.</p>
-        <p class="u-smaller">
-          This will create the directory structure in the current directory.
-        </p>
-      </div>
-      <div class="grid-2">
-        <span class="grid-2__number">3.</span>
-        <p class="u-smaller">
-          Run <code class="u-code">sssg --dev</code> to start the dev server.
-        </p>
-        <p class="u-smaller">
-          Start the dev server. The output will tell you which port the dev
-          server is running on. Make changes, save, and your page will
-          automatically reload in the browser.
-        </p>
-      </div>
-      <div class="grid-2">
-        <span class="grid-2__number">4.</span>
-        <p class="u-smaller">Modify your content.</p>
-        <p class="u-smaller">
-          Your content lives in the <code class="u-code">./src</code> directory.
-          Make and save changes and they will be reflected in the browser.
-        </p>
-      </div>
-      <div class="grid-2">
-        <span class="grid-2__number">5.</span>
-        <p class="u-smaller">
-          Run <code class="u-code">sssg --register --domain  &lt;domain&gt;</code>.
-        </p>
-        <p class="u-smaller">
-          If you have your own domain you can specify it here. Otherwise, you can choose
-          a sub-domain on sssg.dev to get started. As long as someone else hasn't chosen
-          that sub-domain, you can use it. When you register a domain you will also get a
-          "staging" sub-domain on sssg.dev. You can deploy to staging without affecting
-          your production site.
-        </p>
-      </div>
-      <div class="grid-2">
-        <span class="grid-2__number">5.</span>
-        <p class="u-smaller">
-          Run:<br><code class="u-code">sssg --deploy --staging</code><br>or<br><code class="u-code">sssg --deploy --production</code>.
-        </p>
-        <p class="u-smaller">
-          This will build your site, zip it up, and deploy it to our servers (staging or production).
-          You can access both of your sites via HTTPS.
-          <br><br>
-          If you want to deploy to your own server you can do that manually. Run <code>sssg --build</code> and
-          then deploy the contents of <code>./dist</code> to your server.
-        </p>
-      </div>
-    </section>
-
-    <section class="l-why-make-it">
-      <h2 class="l-why-make-it__heading">Why would you make this?!</h2>
-      <div class="l-why-make-it__grid grid">
-        <div>
-          <p>
-            I was tired of overly complicated and unnecessarily powerful static
-            site generators and web hosts that do way more than I need so
-            <span class="u-underline">I made my own.</span>
-          </p>
-          <a href="#get_started" style="display: block; margin-top: 100px"
-            ><button>Let's get started</button></a
-          >
+  <section>
+    <div class="grid">
+      <article>
+        <h4>Tips:</h4>
+        <ul>
+          <li>Edit the <code>src/pages/index.html</code> file to change this page. The page should hot reload automatically after you save.</li>
+          <li>Edit the <code>src/layouts/Default.html</code> file to change the default layout.</li>
+          <li>Edit the <code>src/assets/css/custom.css</code> file to change the custom styles. We've made it easy for you to change the <b>brand and accent colors</b>.</li>
+          <li>Add a page in <code>src/pages</code> with just <b>markdown</b>. Make sure it has an extension of <code>.md</code>.</li>
+        </ul>
+      </article>
+      <article>
+        <h4>Other fun stuff:</h4>
+        <div class="grid">
+          <div x-data="AlpineJsApp()" class="flow">
+            <h6>This is an AlpineJS component.</h6>
+            <p class="flex">
+              <button type="button" @click="count -= 1">-</button>
+              <span class="number" x-text="count"></span>
+              <button type="button" @click="count += 1">+</button>
+            </p>
+            <p>You can build components and micro-apps with AlpineJS.</p>
+          </div>
+          <div id="VanJsContainer"></div>
         </div>
-        <div class="l-why-make-it__question-bang">?!</div>
-      </div>
-    </section>
+      </article>
+      <article>
+        <h4>Deploying your site:</h4>
+        <p>Go <a href="deploy.html">here</a> to learn about deploying your site.</article>
+      </article>
+    </div>
+  </section>
+</DefaultLayout>
 
-    <section class="l-why-use-it">
-      <h2 class="l-why-use-it__heading">Why would I use this?</h2>
+<script>
+  // AlpineJS
+  const AlpineJsApp = () => {
+    return {
+      count: 0,
+    };
+  };
+</script>
 
-      <div class="l-why-use-it__grid grid">
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M11.078 2.25c-.917 0-1.699.663-1.85 1.567L9.05 4.889c-.02.12-.115.26-.297.348a7.493 7.493 0 0 0-.986.57c-.166.115-.334.126-.45.083L6.3 5.508a1.875 1.875 0 0 0-2.282.819l-.922 1.597a1.875 1.875 0 0 0 .432 2.385l.84.692c.095.078.17.229.154.43a7.598 7.598 0 0 0 0 1.139c.015.2-.059.352-.153.43l-.841.692a1.875 1.875 0 0 0-.432 2.385l.922 1.597a1.875 1.875 0 0 0 2.282.818l1.019-.382c.115-.043.283-.031.45.082.312.214.641.405.985.57.182.088.277.228.297.35l.178 1.071c.151.904.933 1.567 1.85 1.567h1.844c.916 0 1.699-.663 1.85-1.567l.178-1.072c.02-.12.114-.26.297-.349.344-.165.673-.356.985-.57.167-.114.335-.125.45-.082l1.02.382a1.875 1.875 0 0 0 2.28-.819l.923-1.597a1.875 1.875 0 0 0-.432-2.385l-.84-.692c-.095-.078-.17-.229-.154-.43a7.614 7.614 0 0 0 0-1.139c-.016-.2.059-.352.153-.43l.84-.692c.708-.582.891-1.59.433-2.385l-.922-1.597a1.875 1.875 0 0 0-2.282-.818l-1.02.382c-.114.043-.282.031-.449-.083a7.49 7.49 0 0 0-.985-.57c-.183-.087-.277-.227-.297-.348l-.179-1.072a1.875 1.875 0 0 0-1.85-1.567h-1.843ZM12 15.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p class="card__text">No dependencies.<br />No configuration.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p class="card__text">Get started quickly.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Zm14.25 6a.75.75 0 0 1-.22.53l-2.25 2.25a.75.75 0 1 1-1.06-1.06L15.44 12l-1.72-1.72a.75.75 0 1 1 1.06-1.06l2.25 2.25c.141.14.22.331.22.53Zm-10.28-.53a.75.75 0 0 0 0 1.06l2.25 2.25a.75.75 0 1 0 1.06-1.06L8.56 12l1.72-1.72a.75.75 0 1 0-1.06-1.06l-2.25 2.25Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p class="card__text">Create your content in HTML or markdown.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              d="M5.625 1.5c-1.036 0-1.875.84-1.875 1.875v17.25c0 1.035.84 1.875 1.875 1.875h12.75c1.035 0 1.875-.84 1.875-1.875V12.75A3.75 3.75 0 0 0 16.5 9h-1.875a1.875 1.875 0 0 1-1.875-1.875V5.25A3.75 3.75 0 0 0 9 1.5H5.625Z"
-            />
-            <path
-              d="M12.971 1.816A5.23 5.23 0 0 1 14.25 5.25v1.875c0 .207.168.375.375.375H16.5a5.23 5.23 0 0 1 3.434 1.279 9.768 9.768 0 0 0-6.963-6.963Z"
-            />
-          </svg>
-          <p class="card__text">Re-use custom layouts.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              d="M7.5 3.375c0-1.036.84-1.875 1.875-1.875h.375a3.75 3.75 0 0 1 3.75 3.75v1.875C13.5 8.161 14.34 9 15.375 9h1.875A3.75 3.75 0 0 1 21 12.75v3.375C21 17.16 20.16 18 19.125 18h-9.75A1.875 1.875 0 0 1 7.5 16.125V3.375Z"
-            />
-            <path
-              d="M15 5.25a5.23 5.23 0 0 0-1.279-3.434 9.768 9.768 0 0 1 6.963 6.963A5.23 5.23 0 0 0 17.25 7.5h-1.875A.375.375 0 0 1 15 7.125V5.25ZM4.875 6H6v10.125A3.375 3.375 0 0 0 9.375 19.5H16.5v1.125c0 1.035-.84 1.875-1.875 1.875h-9.75A1.875 1.875 0 0 1 3 20.625V7.875C3 6.839 3.84 6 4.875 6Z"
-            />
-          </svg>
-          <p class="card__text">Re-use HTML snippets.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p class="card__text">
-            Lightning fast hot reload during development.
-          </p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"
-            />
-          </svg>
-          <p class="card__text">Beautiful styling via OpenProps + Normalize.</p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M9 4.5a.75.75 0 0 1 .721.544l.813 2.846a3.75 3.75 0 0 0 2.576 2.576l2.846.813a.75.75 0 0 1 0 1.442l-2.846.813a3.75 3.75 0 0 0-2.576 2.576l-.813 2.846a.75.75 0 0 1-1.442 0l-.813-2.846a3.75 3.75 0 0 0-2.576-2.576l-2.846-.813a.75.75 0 0 1 0-1.442l2.846-.813A3.75 3.75 0 0 0 7.466 7.89l.813-2.846A.75.75 0 0 1 9 4.5ZM18 1.5a.75.75 0 0 1 .728.568l.258 1.036c.236.94.97 1.674 1.91 1.91l1.036.258a.75.75 0 0 1 0 1.456l-1.036.258c-.94.236-1.674.97-1.91 1.91l-.258 1.036a.75.75 0 0 1-1.456 0l-.258-1.036a2.625 2.625 0 0 0-1.91-1.91l-1.036-.258a.75.75 0 0 1 0-1.456l1.036-.258a2.625 2.625 0 0 0 1.91-1.91l.258-1.036A.75.75 0 0 1 18 1.5ZM16.5 15a.75.75 0 0 1 .712.513l.394 1.183c.15.447.5.799.948.948l1.183.395a.75.75 0 0 1 0 1.422l-1.183.395c-.447.15-.799.5-.948.948l-.395 1.183a.75.75 0 0 1-1.422 0l-.395-1.183a1.5 1.5 0 0 0-.948-.948l-1.183-.395a.75.75 0 0 1 0-1.422l1.183-.395c.447-.15.799-.5.948-.948l.395-1.183A.75.75 0 0 1 16.5 15Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <p class="card__text">
-            Simple javascript sprinkles via <a href="/vanjs.html">VanJS</a> or
-            <a href="/alpinejs.html">AlpineJS.</a>
-          </p>
-        </div>
-        <div class="card">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6 card__svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M9.315 7.584C12.195 3.883 16.695 1.5 21.75 1.5a.75.75 0 0 1 .75.75c0 5.056-2.383 9.555-6.084 12.436A6.75 6.75 0 0 1 9.75 22.5a.75.75 0 0 1-.75-.75v-4.131A15.838 15.838 0 0 1 6.382 15H2.25a.75.75 0 0 1-.75-.75 6.75 6.75 0 0 1 7.815-6.666ZM15 6.75a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5Z"
-              clip-rule="evenodd"
-            />
-            <path
-              d="M5.26 17.242a.75.75 0 1 0-.897-1.203 5.243 5.243 0 0 0-2.05 5.022.75.75 0 0 0 .625.627 5.243 5.243 0 0 0 5.022-2.051.75.75 0 1 0-1.202-.897 3.744 3.744 0 0 1-3.008 1.51c0-1.23.592-2.323 1.51-3.008Z"
-            />
-          </svg>
-          <p class="card__text">Deploy easily to our server or manually to your own.</p>
-        </div>
-      </div>
-      <a class="l-why-use-it__cta" href="#get_started"
-        ><button>I want to give it a try</button></a
-      >
-    </section>
+<script>
+  // VanJS component
+  const { button, div, h6, p, span } = van.tags;
 
-    <section class="l-where">
-      <h2 class="l-where__heading">Where does my content go?</h2>
+  const VanJsComponent = () => {
+    const counter = van.state(0);
+    return div(
+      { class: "flow" },
+      h6("This is a VanJS component."),
+      p(
+        { class: "flex" },
+        button({ type: "button", onclick: () => --counter.val }, "-"),
+        span(
+          { class: "number" },
+          () => counter.val,
+        ),
+        button({ type: "button", onclick: () => ++counter.val }, "+"),
+      ),
+      p("You can build components and micro-apps with VanJS."),
+    );
+  };
 
-      <p class="u-smaller" style="margin-bottom: 32px">
-        Your content goes in the <code>./src</code> directory.
-      </p>
-
-      <div class="grid-3">
-        <div><code class="u-smaller">./dist</code></div>
-        <p class="u-smaller">
-          This is where your site is built. This is where the dev server serves
-          content from. You should deploy from here. You shouldn't edit anything
-          in this directory.
-        </p>
-
-        <div><code class="u-smaller">./src/assets</code></div>
-        <p class="u-smaller">
-          This directory is copied straight across to the
-          <code>./dist</code> directory during build. This is where you put
-          images, custom javascript, and custom css. You refer to these assets
-          like so in your pages: <code>/assets/images/logo.png</code>.
-        </p>
-
-        <div><code class="u-smaller">./src/snippets</code></div>
-        <p class="u-smaller">
-          This directory is where your reusable snippets of HTML go.
-          Subdirectories are supported. Name each snippet uniquely within the
-          project. If you name the file <code>MySnippet.html</code> then you can
-          include that snippet in your HTML using
-          <code>&lt;MySnippet&gt;&lt;/MySnippet&gt;</code>.
-        </p>
-
-        <div><code class="u-smaller">./src/layouts</code></div>
-        <div class="u-smaller">
-          <p class="u-smaller">
-            This is where you can create your own layouts. Be sure to include
-            <code>__CONTENT__</code> where you want your content placed in the
-            layout.
-          </p>
-          <p class="u-smaller">
-            To use a custom layout on a given page, include frontmatter like
-            this in the page where you want to use the custom layout:
-          </p>
-          <pre class="l-pre u-smaller">
-  ---
-  layout: blog.html
-  ---
-  &lt;!-- The rest of your content goes here. --&gt;
-  </pre
-          >
-        </div>
-
-        <div><code class="u-smaller">./src/pages</code></div>
-        <div>
-          <p class="u-smaller">
-            This directory is where your content pages live. It supports
-            subdirectories.
-          </p>
-          <pre class="l-pre u-smaller">
-  my-site
-  ├── dist
-  └── src
-      ├── assets
-      │   ├── css
-      │   │   ├── pico.colors.min.css
-      │   │   ├── pico.min.css
-      │   │   └── styles.css
-      │   ├── images
-      │   │   └── logo.png
-      │   └── js
-      │       └── app.js
-      ├── layouts
-      │   ├── default.html
-      │   └── blog.html
-      ├── pages
-      │   ├── about.html
-      │   ├── index.html
-      │   └── markdown.md
-      └── snippets
-          └── Test.html</pre
-          >
-        </div>
-      </div>
-    </section>
-  </main>
+  van.add(VanJsContainer, VanJsComponent());
+</script>
 </DefaultLayout>
