More open props work

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
 
   <section>
     <h2>How do I get started?</h2>
-    <div class="just-for-gap">
+    <div class="container just-for-gap">
       <article>
         <p>1. Download the binary from <a href="#">here</a>. This is the only dependency.</p>
       </article>
@@ -24,6 +24,7 @@
       </article>
       <article>
         <p>6. Run:<br><br><code>sssg --deploy --staging</code><br><br>or<br><br><code>sssg --deploy --production</code><br><br>to deploy your site to our server. Deploying to staging will not affect your production site.</p>
+        <p>If you do not want to deploy to our servers, run <code>sssg --build</code> and then manually deploy the <code>./dist</code> directory to your server.</p>
       </article>
     </div>
   </section>
