temp commit to rename default.html layout

--- a/temp.html
+++ b/temp.html
@@ -27,7 +27,7 @@
   </div>
 
   <footer class="l-footer">
-    <h3 class="l-footer__heading" style="">simple, 2024</h3>
+    <h3 class="l-footer__heading">simple, 2024</h3>
   </footer>
 </body>
 
