Clean up documentation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -60,7 +60,12 @@
       <div class="grid-2">
         <span class="grid-2__number">5.</span>
         <p class="u-smaller">
-          Run <code class="u-code">sssg --register --domain  &lt;domain&gt;</code>.
+          Run:<br><br>
+          <code class="u-code">sssg --register --domain  &lt;domain&gt;</code>
+          <br><br>
+          or
+          <br><br>
+          <code class="u-code">sssg --register --domain  &lt;subdomain.sssg.dev&gt;</code>
         </p>
         <p class="u-smaller">
           If you have your own domain you can specify it here. Otherwise, you can choose
@@ -71,7 +76,7 @@
         </p>
       </div>
       <div class="grid-2">
-        <span class="grid-2__number">5.</span>
+        <span class="grid-2__number">6.</span>
         <p class="u-smaller">
           Run:<br><code class="u-code">sssg --deploy --staging</code><br>or<br><code class="u-code">sssg --deploy --production</code>.
         </p>
